@@ -1,10 +1,9 @@
 package calculator.domain;
 
-import org.springframework.util.StringUtils;
-
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
+
 
 public class StringCalculator {
     private final Validator validator;
@@ -13,39 +12,37 @@ public class StringCalculator {
         this.validator = validator;
     }
 
-    public int add(String text) {
-        if (validator.isEmpty(text)) {
+    public int add(String input) {
+        if (validator.isEmpty(input)) {
             return 0;
         }
 
-        //커스텀 구분자 처리 (형식: "//;\n1;2;3")
+        String[] values = parseInput(input);
+        List<Integer> numbers = convertToNumbers(values);
+
+        return sum(numbers);
+    }
+
+    private String[] parseInput(String text) {
         if (text.startsWith("//")) {
             String[] tokens = text.split("\n", 2);
             String customDelimiter = tokens[0].substring(2);
-            return sum(tokens[1].split(customDelimiter));
+            return tokens[1].split(customDelimiter);
         }
 
-        //기본 구분자 처리 (",", ":")
-        if (text.contains(",") || text.contains(":")) {
-            return sum(text.split(",|:"));
-        }
-
-        //단일 숫자 반환
-        return Integer.parseInt(text);
+        return text.split(",|:");
     }
 
-    private int sum(String[] values) {
-        //validator 추가
-        List<Integer> list = Arrays.stream(values)
+    private List<Integer> convertToNumbers(String[] values) {
+        List<Integer> numbers = Arrays.stream(values)
                 .map(Integer::parseInt)
-                .toList();
-        validator.assertNoNegativeNumbers(list);
+                .collect(Collectors.toList());
 
-        return list.stream().mapToInt(Integer::intValue).sum();
+        validator.assertPositiveNumbers(numbers);
+        return numbers;
     }
 
-    private int parseNumber(String value) {
-        int number = Integer.parseInt(value);
-        return number;
+    private int sum(List<Integer> numbers) {
+        return numbers.stream().mapToInt(Integer::intValue).sum();
     }
 }
